--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,8 +116,25 @@
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden">
-        </activity> 
-        
+        </activity>
+
+        <activity
+            android:name="mega.privacy.android.app.lollipop.ConfirmEmailActivityLollipop"
+            android:label="@string/confirm_email_text"
+            android:theme="@style/login_activity"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+
+        <activity
+            android:name="ConfirmEmailActivity"
+            android:label="@string/confirm_email_text"
+            android:theme="@style/login_activity"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+
         <activity
             android:name="LauncherActivity"
             android:label="@string/app_name"
