--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -347,8 +347,7 @@
                 android:label="@string/app_name">                
        </activity>
        
-       <activity android:screenOrientation="portrait"
-                android:name="mega.privacy.android.app.providers.FileProviderActivity"
+       <activity android:name="mega.privacy.android.app.providers.FileProviderActivity"
                 android:label="@string/app_name">
                 <intent-filter>
                     <action
